[package]
name = "candle-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
candle-core = { version = "0.9.0", features = ["cuda", "cudarc", "cudnn"] }
candle-flash-attn = { version = "0.9.0", features = ["cudnn"] }
candle-nn = { version = "0.9.0", features = ["cuda"] }
clap = { version = "4.5.37", features = ["derive"] }
